Changed homepage url, assets are loaded properly

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://teknillinenskimbakerho.github.io/teski",
+  "homepage": "https://teknillinenskimbakerho.github.io",
   "name": "teski",
   "version": "0.1.0",
   "private": true,
